Course Recommendation bug fixed