@@ -1,41 +1,56 @@
 package com.example.CarrerLink_backend.dto.response;
 
-import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
 public class GeminiResponse {
     private List<Candidate> candidates;
 
-    public List<String> getTextResults() {
+    public List<String> extractCourseList() {
         if (candidates == null || candidates.isEmpty()) {
-            return List.of("No recommendations found.");
+            return List.of("No courses found.");
         }
+
+        // Extract text from first candidate's content parts
         return candidates.stream()
-                .map(candidate -> candidate.getContent().getParts().get(0).getText())
-                .toList();
+                .flatMap(candidate -> candidate.getContent().getParts().stream())
+                .map(Part::getText)
+                .flatMap(text -> List.of(text.split("\n")).stream()) // Split into list
+                .map(String::trim)
+                .filter(line -> !line.isEmpty())
+                .collect(Collectors.toList());
     }
+}
 
-    // Inner classes to match JSON response
-    private static class Candidate {
-        private Content content;
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+class Candidate {
+    private Content content;
+}
 
-        public Content getContent() {
-            return content;
-        }
-    }
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+class Content {
+    private List<Part> parts;
+}
 
-    private static class Content {
-        private List<Part> parts;
-
-        public List<Part> getParts() {
-            return parts;
-        }
-    }
-
-    private static class Part {
-        private String text;
-
-        public String getText() {
-            return text;
-        }
-    }
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+class Part {
+    private String text;
 }
